@@ -1,6 +1,6 @@
 Package: blme
 Version: 1.0-3
-Date: $Date$
+Date: 08-14-2014
 Title: Bayesian Linear Mixed-Effects Models
 Author: Vincent Dorie <vjd4@nyu.edu>
 Maintainer: Vincent Dorie <vjd4@nyu.edu>
